--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - PYTHONDONTWRITEBYTECODE=1
     env_file:
       - .env
+      - stack.env
     networks:
       iot-weather-1:
         ipv4_address: 172.18.0.2  # Asigna una dirección IP específica a 'app'
