--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -36,6 +36,20 @@ services:
       iot-backend:
         ipv4_address: 172.21.0.3  # Asigna una dirección IP específica a 'database'
   
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin4
+    restart: always
+    ports:
+      - "8321:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: iot@eia.edu.co
+      PGADMIN_DEFAULT_PASSWORD: raspberry
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    networks:
+      iot-backend:
+        ipv4_address: 172.21.0.4
 
 networks:
   iot-backend:
